# sipap-batch-scrapper

./: .dockerignore  .gitignore  DEPENDENCIES.md  Dockerfile  README.md  VERIFICATION-REPORT.md  inspect_html.py  pyproject.toml  requirements-lambda.txt  requirements.txt  test_api_integration.py  test_live_scrapers.py
.github/workflows/: build-batch-scraper-image.yml  build-lambda-packages.yml
docs/: API-LEAGUE-COVERAGE-ANALYSIS.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  FIXTURE-EXTRACTION.md  LEAGUE-EXPANSION-SUMMARY.md  SECTION-2.6-API-BASED.md
examples/: README.md  example_aurora_client.py  example_base_scraper.py  example_daily_harvest.py  example_espn_scraper.py  example_fixture_updater.py  example_flashscore_scraper.py  example_futbol24_scraper.py  example_odds_updater.py  example_redis_client.py
scripts/: build_lambda_packages.sh
src/sipap_batch_scraper/: __init__.py
src/sipap_batch_scraper/apis/: __init__.py  api_football.py  base.py  football_data.py  odds_api.py  thesportsdb.py
src/sipap_batch_scraper/jobs/: __init__.py  daily_harvest.py  db_query.py  fixture_updater.py  odds_updater.py
src/sipap_batch_scraper/scrapers/: __init__.py  base.py  espn.py  flashscore.py  futbol24.py
src/sipap_batch_scraper/storage/: __init__.py  aurora.py  redis.py
src/sipap_batch_scraper/util/: __init__.py  secrets.py
tests/unit/: test_base_scraper.py  test_espn_scraper.py  test_flashscore_scraper.py  test_futbol24_scraper.py  test_storage_aurora.py  test_storage_redis.py
tests/unit/apis/: __init__.py  test_base_api.py  test_football_data.py  test_odds_api.py  test_thesportsdb.py
tests/unit/jobs/: test_daily_harvest.py  test_fixture_updater.py  test_odds_updater.py
tests/unit/util/: test_secrets.py
